# advent-of-code-2025

./: .gitignore  LICENSE
Day_5/hardcaml_solution/: .gitignore  README.md  dune-project  hardcaml_advent_of_code_day_5.opam  hardcaml_improvements.md
Day_5/hardcaml_solution/src/: dune  execution_unit.ml  execution_unit.mli  id_fetcher.ml  id_fetcher.mli  id_range_fetcher.ml  id_range_fetcher.mli  initializable_ram.ml  initializable_ram.mli  top.ml  top.mli
Day_5/hardcaml_solution/src/parse_input/: dune  parse.ml  parse.mli
Day_5/hardcaml_solution/src/software_solution/: dune  solution.ml  solution.mli
Day_5/hardcaml_solution/test/: dune  test_execution_unit.ml  test_range_finder.ml  test_top.ml
Day_5/hardcaml_solution/test/inputs/: own_input.txt  small_input.txt
Day_5/ocaml_solution/: dune-project  ocaml_solution.opam
Day_5/ocaml_solution/lib/: dune  naive_solution.ml  optimal_solution.ml  parse.ml  types.ml
Day_5/ocaml_solution/test/: dune
Day_5/ocaml_solution/test/inputs/: own_input.txt
